--- a/pages/person/information/information.wxml
+++ b/pages/person/information/information.wxml
@@ -1,123 +1,60 @@
 <!-- 修改考生信息页面 -->
 <view class="page">
-<form bindsubmit="formSubmit">
-  <!-- <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-      <view class="weui-cell__hd"></view>
-      <view class="weui-cell__bd weui-cell_primary">
-          <text>考试类型</text>
-          <picker bindchange="bindPickerChange" value="{{majortypeIndex}}" range="{{majortypeObjs}}" range-key='NAME' id="MAJORTYPE" name="MAJORTYPE">
-              <view class='picker'>{{majortypeObjs[majortypeIndex].NAME}}</view>
-            </picker>
-      </view>
-  </view> -->
-    
-  <!-- <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-      <view class="weui-cell__bd weui-cell_primary">
-          <text>年级</text>
-          <picker bindchange="bindPickerChange" value="{{gradeIndex}}" range="{{gradeObjs}}" range-key='NAME' id="GRADE" name="GRADE">
-        <view class='picker'>{{gradeObjs[gradeIndex].NAME}}</view>
-      </picker>
-      </view>
-  </view> -->
-  <view class="weui-cells weui-cells_after-title">
-    <view class="weui-cell">
-        <view class="weui-cell__hd">
-            <view class="weui-label">考试类型</view>
-        </view>
-        <view class="weui-cell__bd">
-            <picker bindchange="bindPickerChange" value="{{majortypeIndex}}" range="{{majortypeObjs}}" range-key='NAME' id="MAJORTYPE" name="MAJORTYPE" >
-               <view class='picker'>{{majortypeObjs[majortypeIndex].NAME}}</view> 
-            </picker>
-        </view>
-    </view>
-  </view> 
-  <!-- <view class="weui-cell weui-cell_access" >
-      <view class="weui-cell__hd"></view>
-      <view class="weui-cell__bd weui-cell_primary">
-          <text>考生所在地</text>
-          <text>{{province}}</text>
-      </view>
-      <view class="weui-cell__ft"></view>
-    </view>
-    <view class="weui-cell weui-cell_access" wx:else>
-      <view class="weui-cell__hd"></view>
-      <view class="weui-cell__bd weui-cell_primary">
-          <text>考生所在地</text>
-          <text>{{province}}</text>
-      </view>
-      <view class="weui-cell__ft"></view>
-    </view> -->
-    <view class="weui-cells weui-cells_after-title" bindtap="provice" id="{{province_id}}" wx:if="{{province == '请选择...'}}">
-            <view class="weui-cell">
-                <view class="weui-cell__bd">考生所在地</view>
-                <view class="weui-cell__ft">
-                    {{province}}
-                </view>
-            </view>
-        </view>
-    <view class="weui-cells weui-cells_after-title" wx:else>
-            <view class="weui-cell">
-                <view class="weui-cell__bd">考生所在地</view>
-                <view class="weui-cell__ft">
-                    {{province}}
-                </view>
-            </view>
-        </view>
-    <view class="weui-cells__tips" wx:if="{{province == ''}}">*考生所在地仅允许填写一次，请认真选择</view>
-    <view class="weui-cells__tips" wx:else>*考生所在地已选择，如需再次修改请联系客服</view> 
-    <view class="weui-cells__title"></view>
-    <view class="weui-cells weui-cells_after-title">
-    <view class="weui-cell">
-        <view class="weui-cell__hd">
-            <view class="weui-label">年级</view>
-        </view>
-        <view class="weui-cell__bd">
-            <picker bindchange="bindPickerChange" value="{{gradeIndex}}" range="{{gradeObjs}}" range-key='NAME' id="GRADE" name="GRADE">
-        <view class='picker'>{{gradeObjs[gradeIndex].NAME}}</view>
-      </picker>
-        </view>
-    </view>
-  </view> 
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_input">
-        <view class="weui-cell__hd">
-            <view class="weui-label">高考成绩</view>
-        </view>
-        <view class="weui-cell__bd">
-            <input class="weui-input" placeholder="预估成绩" type='number' value='{{user.EXAMSCORE}}' name='EXAMSCORE'/>
-        </view>
-      </view>
-    </view>
-    <view class="weui-cells__tips">*该成绩用于模拟填报、智能推荐等相关功能</view>
-    <view class="weui-cells__title"></view>
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_input">
-        <view class="weui-cell__hd">
-            <view class="weui-label">一模成绩</view>
-        </view>
-        <view class="weui-cell__bd">
-            <input class="weui-input" placeholder="暂无" type='number' value='{{user.FIRSTMOCK}}' name='FIRSTMOCK'/>
-        </view>
-      </view>
-      <view class="weui-cell weui-cell_input">
-        <view class="weui-cell__hd">
-            <view class="weui-label">二模成绩</view>
-        </view>
-        <view class="weui-cell__bd">
-            <input class="weui-input" placeholder="暂无" type='number' value='{{user.SECONDMOCK}}' name='SECONDMOCK'/>
-        </view>
-      </view>
-      <view class="weui-cell weui-cell_input">
-        <view class="weui-cell__hd">
-            <view class="weui-label">三模成绩</view>
-        </view>
-        <view class="weui-cell__bd">
-            <input class="weui-input" placeholder="暂无" type='number' value='{{user.THIRDMOCK}}' name='THIRDMOCK'/>
-        </view>
-      </view>
-    </view>
-    <view class="weui-cells__tips">*模拟考试成绩用于高校检索查询</view>
-<button class="weui-btn" type="primary" form-type='submit'>保存修改</button>
+<!-- title -->
+	<view class="page__hd">
+		<view class="page__title">考生信息</view>
+		<view class="page__desc">student</view>
+	</view>
+<form bindsubmit='formSubmit'>
+<view class="weui-cells weui-cells_after-title">
+  <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+		<view class="weui-cell__hd"></view>
+		<view class="weui-cell__bd weui-cell_primary">
+			<text>科目</text>
+			<input type='text' name='' value='{{majortype}}'style="text-align:right" disabled='true'/>
+		</view>
+  </view>
+	<view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+		<view class="weui-cell__hd"></view>
+		<view class="weui-cell__bd weui-cell_primary">
+			<text>城市</text>
+			<input type='text' name='' value='{{city}}'style="text-align:right" disabled='true'/>
+		</view>
+  </view>
+	<view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+		<view class="weui-cell__hd"></view>
+		<view class="weui-cell__bd weui-cell_primary">
+			<text>区域</text>
+			<input type='text' name='' value='{{county}}'style="text-align:right" disabled='true'/>
+		</view>
+  </view>
+	<view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+		<view class="weui-cell__hd"></view>
+		<view class="weui-cell__bd weui-cell_primary">
+			<text>学校</text>
+			<input type='text' name='' value='{{school_name}}'style="text-align:right" disabled='true'/>
+		</view>
+  </view>
+	<view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+		<view class="weui-cell__hd"></view>
+		<view class="weui-cell__bd weui-cell_primary">
+			<text>高考年份</text>
+			<input type='text' name='' value='{{examyear}}'style="text-align:right" disabled='true'/>
+		</view>
+  </view>
+</view>
+<view class="weui-cells__title">如需更改以上信息请联系客服 0311-69053126</view>
+<view class="weui-cells weui-cells_after-title">
+	<view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+		<view class="weui-cell__hd"></view>
+		<view class="weui-cell__bd weui-cell_primary">
+			<text>高考分数</text>
+			<input type='text' name='EXAMSCORE' value='{{examscore}}'style="text-align:right"/>
+		</view>
+  </view>
+</view>
+	<view class="weui-btn-area">
+  	<button class="weui-btn" type="primary" form-type='submit'>完成</button>
+  </view>
 </form>
 </view>
-
