--- a/pages/person/person.wxml
+++ b/pages/person/person.wxml
@@ -9,8 +9,8 @@
 	<!-- 头像 -->
 	<view class="weui-cells weui-cells_after-title">
 		<view class="weui-cell">
-			<view class="weui-cell__hd" style="position: relative;margin-right: 10px;">
-				<image src="./img/123.jpg" style="width: 50px; height: 50px; display: block"/>
+			<view class="weui-cell__hd" bindtap='chooseImageTap' style="position: relative;margin-right: 10px; border-radius: 50px;">
+				<image src="{{headurl}}" style="width: 50px; height: 50px; display: block"/>
 			</view>
 			<view class="weui-cell__bd">
 				<view>{{nickname}}</view>
@@ -26,7 +26,7 @@
 	<!-- 个人信息 -->
 	<view class="weui-cells__title">个人信息</view>
 	<view class="weui-cells weui-cells_after-title">
-		<navigator url="/pages/person/basics/basics" hover-class="navigator-hover" open-type='navigate'>
+		<navigator url="/pages/person/basics/basics" hover-class="navigator-hover" open-type='redirectTo'>
 			<view class="weui-cell">
 				<view class="weui-cell__hd">
 					<image src="./img/purple.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
@@ -34,7 +34,7 @@
 				<view class="weui-cell__bd">基本信息</view>
 			</view>
 		</navigator>
-		<navigator url="/pages/person/information/information" hover-class="navigator-hover" open-type='navigate'>
+		<navigator url="/pages/person/information/information" hover-class="navigator-hover" open-type='redirectTo'>
 			<view class="weui-cell">
 				<view class="weui-cell__hd">
 					<image src="./img/red.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
