--- a/pages/person/tbasics/tbasics.wxml
+++ b/pages/person/tbasics/tbasics.wxml
@@ -1,75 +1,51 @@
 <!-- 修改老师个人信息页面 -->
 <view class="page">
+<!-- title -->
+	<view class="page__hd">
+		<view class="page__title">基本信息</view>
+		<view class="page__desc">teacher</view>
+	</view>
 <form bindsubmit="formSubmit">
+<view class="weui-cells weui-cells_after-title">
   <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
       <view class="weui-cell__hd"></view>
       <view class="weui-cell__bd weui-cell_primary">
           <text>昵称</text>
-          <input type='text' name='NICKNAME' value='{{user.NICKNAME}}'style="text-align:right" />
+          <input type='text' name='NICKNAME' value='{{nickname}}'style="text-align:right" />
       </view>
   </view>
   <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
       <view class="weui-cell__hd"></view>
       <view class="weui-cell__bd weui-cell_primary">
           <text>性别</text>
-          <picker bindchange="bindPickerChange" value="{{sexIndex}}" range="{{sexObjs}}" name='SEX' range-key='NAME'>
+          <picker bindchange="changeSex" value="{{sexIndex}}" range="{{sexs}}" name='' range-key='val'>
         <view class="picker">
-          {{sexObjs[sexIndex].NAME}}
+          {{thisSex.val}}
         </view>
       </picker>
-      </view>
-  </view>
-  <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" >
-      <view class="weui-cell__hd"></view>
-      <view class="weui-cell__bd weui-cell_primary">
-          <text>出生日期</text>
-          <picker mode="date" value="{{birthday}}" start="1900-09-01" bindchange="bindDateChange" name="BIRTHDAY">
-      <view class="picker">{{birthday}}</view>
-      </picker>
-      </view>
-  </view>
-  <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-      <view class="weui-cell__hd"></view>
-      <view class="weui-cell__bd weui-cell_primary">
-          <text>职务</text>
-          <input type='text' name='JOBTYPE' value='{{user.JOBTYPE}}'style="text-align:right" />
       </view>
   </view>
   <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
       <view class="weui-cell__hd"></view>
       <view class="weui-cell__bd weui-cell_primary">
           <text>院校名称</text>
-          <input type='text' name='SCNAME' value='{{user.SCNAME}}'style="text-align:right" />
+          <input type='text' name='' value='{{school_name}}'style="text-align:right" disabled='true'/>
       </view>
   </view>
   <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
       <view class="weui-cell__hd"></view>
       <view class="weui-cell__bd weui-cell_primary">
           <text>工作年限</text>
-          <input type='text' name='JOBDATE_VALUE' value='{{user.JOBDATE_VALUE}}'style="text-align:right" />
+          <picker bindchange="changeJobyear" value="{{}}" range="{{jobyears}}" name='' range-key='val'>
+        <view class="picker">
+          {{thisJobyear.val}}
+        </view>
+      </picker>
       </view>
   </view>
-  <!-- <navigator class="weui-cell weui-cell_access" hover-class="weui-cell_active" url='/pages/person/security/authentication/authentication'>
-      <view class="weui-cell__hd"></view>
-      <view class="weui-cell__bd weui-cell_primary">
-          <text>实名认证</text><text>{{user.IDCARD}}</text>
-      </view>
-      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </navigator> -->
-  <!-- <navigator class="weui-cell weui-cell_access" hover-class="weui-cell_active" url='/pages/person/security/email/email'>
-      <view class="weui-cell__hd"></view>
-      <view class="weui-cell__bd weui-cell_primary">
-          <text>邮箱设置</text><text>{{user.EMAIL}}</text>
-      </view>
-      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </navigator> -->
-  <!-- <navigator class="weui-cell weui-cell_access" hover-class="weui-cell_active" url='/pages/person/security/phone/phone'>
-      <view class="weui-cell__hd"></view>
-      <view class="weui-cell__bd weui-cell_primary">
-          <text>手机号设置</text><text>{{user.PHONE}}</text>
-      </view>
-      <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </navigator>  -->
-  <button class="weui-btn" type="primary" form-type='submit'>保存修改</button>
+	</view>
+	<view class="weui-btn-area">
+  	<button class="weui-btn" type="primary" form-type='submit'>完成</button>
+  </view>
 </form>
 </view>
