--- a/pages/person/security/loginpw/loginpw.wxml
+++ b/pages/person/security/loginpw/loginpw.wxml
@@ -4,7 +4,7 @@
 <!-- title -->
 	<view class="page__hd">
 		<view class="page__title">修改密码</view>
-		<view class="page__desc">student</view>
+		<view class="page__desc">password</view>
 	</view>
 <form bindsubmit="formSubmit">
 <view class="page__bd">
