ldq：完成智能推荐

--- a/pages/intelligence/result/content/content.wxml
+++ b/pages/intelligence/result/content/content.wxml
@@ -30,7 +30,117 @@
 
       <image src="/images/{{img}}.png" style='width:80rpx;height:80rpx'></image>
     </view>
-    <view class="page__bd page__bd_spacing">
+
+		<view class="page__bd page__bd_spacing">
+      <view class="weui-flex">
+        <view class="weui-flex__item">
+          <view class="placeholder" style='text-align:left'>院校历年数据：</view>
+        </view>
+        <view class="weui-flex__item">
+          <view class="placeholder" style='text-align:right'>{{style}}　{{subject}}</view>
+        </view>
+      </view>
+      <view class='center' style='background-color: #ccc'>
+        <view class='center-item' style='width:15%'>年份</view>
+        <view class='center-item' style='width:15%'>批次</view>
+        <view class='center-item'>分数区间</view>
+        <view class='center-item' style='width:30%'>排名</view>
+        <view class='center-item'>录取人数</view>
+      </view>
+      <view wx:if="{{grade.length == 0}}">
+        <view class='bottom' >
+        <view class='bottom-item' style='width:15%'>
+          <text>---</text>
+          <text>---</text>
+        </view>
+        <view class='bottom-item' style='width:15%'>
+          <text>---</text>
+          <text>---</text>
+        </view>
+        <view class='bottom-item' >
+          <text>---</text>
+          <text>---</text>
+        </view> 
+        <view class='bottom-item' style='width:30%'>
+          <text>---</text>
+          <text>---</text>
+        </view>
+        <view class='bottom-item'>
+          <text>---</text>
+          <text>---</text>
+        </view>
+      </view>
+      </view>
+      <view wx:else>
+        <view class='bottom' wx:for="{{grade}}" wx:key="" hidden="{{item.checked}}">
+          <view class='bottom-item' style='width:15%'>
+            <text>{{item.YEAR_VALUE}}</text>
+          </view>
+          <view class='bottom-item' style='width:15%'>
+            <text>{{item.ARRANGMENT_VALUE}}</text>
+          </view>
+          <view class='bottom-item'>
+            <text>{{item.MAXSCORE}}~{{item.MINSCORE}}</text>
+          </view>
+          <view class='bottom-item' style='width:30%'>
+            <text>{{item.MaxPM}}~{{item.MinPM}}</text>
+          </view>
+          <view class='bottom-item'>
+            <text>{{item.ENTERCOUNT}}</text>
+          </view>
+        </view>
+      </view>
+    </view>
+
+		<!-- ldq -->
+		<view class="page__bd page__bd_spacing" style='background-color: #409EFF; color: #fff'>
+			<view class='center'>
+        <view class='center-item ldq-center'>专业名称</view>
+			</view>
+			<view class='center'>
+				<view class='center-item'>年份</view>
+        <view class='center-item'>最低分</view>
+        <view class='center-item'>最高分</view>
+        <view class='center-item'>平均分</view>
+        <view class='center-item'>计划数</view>
+        <view class='center-item'>录取数</view>
+      </view>
+		</view>
+		<block wx:for="{{data}}" wx:key="">
+			<view class="page__bd page__bd_spacing">
+				<view class="weui-flex">
+						<view class="placeholder ldq-center" style='color: #409EFF; width: 300rpx;'>{{item.MAJORNAME}}</view>
+				</view>
+				<view>
+					<view class='bottom' wx:for="{{item.MJLIST}}" wx:key="">
+						<view class='bottom-item'>
+							<text style='color: #999'>{{item.YEAR_VALUE}}</text>
+						</view>
+						<view class='bottom-item'>
+							<text style='color: #000' wx:if="{{item.MINSCORE == 0}}">-</text>
+							<text style='color: #67c23a' wx:else>{{item.MINSCORE}}</text>
+						</view>
+						<view class='bottom-item'>
+							<text style='color: #000' wx:if="{{item.MAXSCORE == 0}}">-</text>
+							<text style='color: #f56c6c' wx:else>{{item.MAXSCORE}}</text>
+						</view>
+						<view class='bottom-item'>
+							<text style='color: #000' wx:if="{{item.AVESCORE == 0}}">-</text>
+							<text style='color: #e6a23c' wx:else>{{item.AVESCORE}}</text>
+						</view>
+						<view class='bottom-item'>
+							<text style='color: #000' wx:if="{{item.PLANCOUNT == 0}}">-</text>
+							<text style='color: #999' wx:else>{{item.PLANCOUNT}}</text>
+						</view>
+						<view class='bottom-item'>
+							<text style='color: #000' wx:if="{{item.ENTERCOUNT == 0}}">-</text>
+							<text style='color: #000' wx:else>{{item.ENTERCOUNT}}</text>
+						</view>
+					</view>
+				</view>
+			</view>
+		</block>
+    <!-- <view class="page__bd page__bd_spacing">
         <view class="weui-flex">
             <view class="weui-flex__item">
               <view class="placeholder" style='text-align:left'>院校历年数据：</view></view>
@@ -87,8 +197,8 @@
         </view>
       </view>
     </view>
-    </view>
-    <view class="page__bd page__bd_spacing">
+    </view> -->
+    <!-- <view class="page__bd page__bd_spacing">
       <view class="weui-flex">
             <view class="weui-flex__item"><view class="placeholder" style='text-align:left'>专业招生计划及历年数据：</view></view>
       </view>
@@ -136,9 +246,10 @@
           <view class="weui-flex" style="background-color:#f7f7f7">
             <view class="weui-flex__item"><view class="placeholder year">学制<text style="color:red">（2018）</text></view></view>
             <view class="weui-flex__item"><view class="placeholder">4年</view></view>
-          </view>  -->
+          </view> 
         </view>
       </view>
-    </view>
+    </view> --> 
+		
   </view>
   <view class='white'></view>
