--- a/pages/person/improve/improve.wxml
+++ b/pages/person/improve/improve.wxml
@@ -1,46 +1,14 @@
 <!--pages/person/improve/improve.wxml-->
-<!-- 升级会员页面（单人买卡  优惠团购） -->
+<!-- 升级会员页面 -->
 <view wx:if="{{id == 1}}">
   <view class='banner'>
     <image src="{{single}}"></image>
   </view>
-  <view class='btn' bindtap='pay' id="29800"><text class='text'>立即购买</text></view>
+  <view class='btn' bindtap='pay' id="13600"><text class='text'>立即购买</text></view>
 </view>
 <view wx:if="{{id == 2}}">
-  <view class='page'>
-   <view class='head'>
-    <image src="{{banner}}"></image>
-   </view>
-    <view class="page__bd">
-      <view class="weui-cells weui-cells_after-title">
-        <view class="weui-cell weui-cell_input">
-            <view class="weui-cell__hd">
-                <view class="weui-label">手机号1：</view>
-            </view>
-            <view class="weui-cell__bd">
-                <input class="weui-input" placeholder="请输入手机号1" bindinput="bindPhone1"/>
-            </view>
-        </view>
-        <view class="weui-cell weui-cell_input">
-            <view class="weui-cell__hd">
-                <view class="weui-label">手机号2：</view>
-            </view>
-            <view class="weui-cell__bd">
-                <input class="weui-input" placeholder="请输入手机号2" bindinput="bindPhone2"/>
-            </view>
-        </view>
-    </view>
-      <view class='point'>
-        <view class='point-1'>
-          <icon type="warn" size="23" color="#F43530"></icon>
-          <text>重要提示：</text>
-        </view>
-        <view class='point-2'>
-          <text>1.请确保填写的手机号已注册了账号。</text>
-          <text>2.充值成功后将直接为您升级成黄金会员</text>
-        </view>
-      </view>
-      <view class='appoint' bindtap="bindSubmit" id="45600">立即提交</view>
-    </view>
-</view>
+  <view class='banner'>
+    <image src="{{single}}"></image>
+  </view>
+  <view class='btn' bindtap='pay' id="29800"><text class='text'>立即购买</text></view>
 </view>
