--- a/pages/person/person.wxml
+++ b/pages/person/person.wxml
@@ -51,7 +51,7 @@
 			<view class="weui-cell__hd">
 				<image src="./img/yellow.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
 			</view>
-			<view class="weui-cell__bd">智能推荐</view>
+			<view class="weui-cell__bd">我的收藏</view>
 		</view>
 	</view>
 	<!-- 账户信息 -->
@@ -73,6 +73,22 @@
 				<view class="weui-cell__bd">绑定手机</view>
 			</view>
 		</navigator>
+	</view>
+	<!-- vip -->
+	<view class="weui-cells__title">开通 VIP</view>
+	<view class="weui-cells weui-cells_after-title">
+		<view class="weui-cell" bindtap="single" id='1'>
+			<view class="weui-cell__hd">
+				<image src="./img/vip1.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+			</view>
+			<view class="weui-cell__bd">开通初级会员</view>
+		</view>
+		<view class="weui-cell" bindtap="single" id='2'>
+			<view class="weui-cell__hd">
+				<image src="./img/vip2.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+			</view>
+			<view class="weui-cell__bd">开通高级会员</view>
+		</view>
 	</view>
 </view>
 <!-- 老师 -->
