--- a/pages/person/person.wxml
+++ b/pages/person/person.wxml
@@ -47,12 +47,22 @@
 	<!-- 个人收藏 -->
 	<view class="weui-cells__title">个人收藏</view>
 	<view class="weui-cells weui-cells_after-title">
-		<view class="weui-cell">
-			<view class="weui-cell__hd">
-				<image src="./img/yellow.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+		<navigator url="/pages/person/collect/collect" hover-class="navigator-hover" open-type='navigateTo'>
+			<view class="weui-cell">
+				<view class="weui-cell__hd">
+					<image src="./img/yellow.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+				</view>
+				<view class="weui-cell__bd">我的收藏</view>
 			</view>
-			<view class="weui-cell__bd">我的收藏</view>
-		</view>
+		</navigator>
+		<navigator url="/pages/person/collect/collect" hover-class="navigator-hover" open-type='navigateTo'>
+			<view class="weui-cell">
+				<view class="weui-cell__hd">
+					<image src="./img/yellow.svg" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
+				</view>
+				<view class="weui-cell__bd">我的志愿</view>
+			</view>
+		</navigator>
 	</view>
 	<!-- 账户信息 -->
 	<view class="weui-cells__title">账户信息</view>
